# image-text-inserter

./: .gitignore  main.py  pyproject.toml
src/: insert_text_2_image.py
